# src_platform_clip-netd

./: CHANGELOG  Makefile.am  Makefile.in  README.md  configure  configure.ac
init/: Makefile.am  Makefile.in  netd.start  netd.stop
src/: Makefile.am  Makefile.in  ipsec-updownd.c  netd-client.c  netd.c
